@@ -32,7 +32,7 @@ gss_krb5_get_tkt_flags(minor_status, context_handle, ticket_flags)
 
    /* validate the context handle */
    if (! kg_validate_ctx_id(context_handle)) {
-      *minor_status = G_VALIDATE_FAILED;
+      *minor_status = (OM_uint32) G_VALIDATE_FAILED;
       return(GSS_S_NO_CONTEXT);
    }
 
