@@ -200,13 +200,13 @@ kg_seal(minor_status, context_handle, conf_req_flag, qop_req,
 
    /* only default qop is allowed */
    if (qop_req != GSS_C_QOP_DEFAULT) {
-      *minor_status = G_UNKNOWN_QOP;
+      *minor_status = (OM_uint32) G_UNKNOWN_QOP;
       return(GSS_S_FAILURE);
    }
 
    /* validate the context handle */
    if (! kg_validate_ctx_id(context_handle)) {
-      *minor_status = G_VALIDATE_FAILED;
+      *minor_status = (OM_uint32) G_VALIDATE_FAILED;
       return(GSS_S_NO_CONTEXT);
    }
 
